--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "githubreducer",
+  "name": "authcontext",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -8,7 +8,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
