--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "githubreducer",
+  "name": "routing1",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -10,12 +10,14 @@
   "dependencies": {
     "axios": "^0.27.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "vite": "^2.9.9"
-  }
+  },
+  "homepage": "."
 }
